Monitors connected with DisplayPort 2.1 are missing colorspace property
When using my monitor in DP2.1 mode, drm_info is missing the colorspace property. Toggling the monitor to DP1.4 mode shows the property, so it seems to only be a problem in DP2.1. GPU: 7900XTX Monitor: SAMSUNG Odyssey Neo G9 (G95NC) @ 7680x2160@240
My understanding is that DP2.1 uses MST, so it's possible that the bug is for all MST connections.
Adding the colorspace property to the connector in dm_dp_add_mst_connector seems to resolve the issue.